ovintegration/manifests/20-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ovintegration-gateway
  namespace: ${NAMESPACE}
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
